--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="about">
         <h2>About Us</h2>
-        <p>We are web developers and coders who are experts in iOS development.</p>
+        <p>We are web developers and coders who are experts in iOS development. we are professionals with great knoledge</p>
     </section>
 
     <section class="services">
